# pico-fbw

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile.in  LICENSE  PORTING.md  README.md  app.pro  build.py  clang-format.cmake  devgoals.md  index.html  main.cpp  messages.h  todo.md  version.h  window.cpp  window.h  worker.cpp  worker.h
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: build.yml  cmake.yml  esp-idf_install.sh
docs/: index.html  style.css
docs/wifly/: btn.js  gen.js  map.js
lib/: CMakeLists.txt  clang-format.cmake  jsmn.h  lfs.c  lfs.h  lfs_util.c  lfs_util.h  mimetype.h  minmea.c  minmea.h  nav.c  nav.h  parson.h  pid.c  pid.h  semver.c  semver.h
lib/fusion/: acc.c  acc.h  accel.c  approx.c  approx.h  calibration.c  calibration.h  fconfig.h  fmath.c  fmath.h  fusion.c  fusion.h  gyro.c  madgwick.c  madgwick.h  mag.c  mag.h  matrix.c  matrix.h  orient.c  orient.h  status.c  status.h
lib/fusion/drivers/: ak09916.c  ak09916.h  bno055.c  bno055.h  compat.h  drivers.c  drivers.h  icm20948.c  icm20948.h
picolite/: CMakeLists.txt  picolite.cpp  picolite.h
picolite/picoboot_connection/: CMakeLists.txt
platform/: CMakeLists.txt  adc.h  defs.h  flash.h  gpio.h  helpers.h  i2c.h  int.h  pwm.h  stdio.h  sys.h  time.h  types.h  uart.h  wifi.h
platform/esp/: CMakeLists.txt  defs.h  esp_idf_import.cmake  flash.c  gpio.c  howto.md  i2c.c  pwm.c  stdio.c  sys.c  time.c  uart.c  wifi.c
platform/esp/cmake/: esp.cmake  esp_idf_import.cmake
platform/esp/resources/: esp.cmake  esp_idf_import.cmake  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.debug  sdkconfig.defaults.debug.in  sdkconfig.defaults.in
platform/esp/wifi/: dns.c  dns.h  http.c  http.h  wifi.c
platform/example/: CMakeLists.txt  defs.h  flash.c  gpio.c  howto.md  i2c.c  pwm.c  stdio.c  sys.c  time.c  uart.c
platform/example/resources/: example.cmake  howto.md
platform/host/: CMakeLists.txt  defs.h  flash.c  gpio.c  i2c.c  pwm.c  stdio.c  stdio_windows.h  sys.c  sys_shared.h  time.c  time_apple.h  uart.c
platform/host/resources/: host.cmake
platform/pico/: CMakeLists.txt  adc.c  defs.h  flash.c  gpio.c  howto.md  i2c.c  lwipopts.h  pwm.c  pwm.pio  stdio.c  sys.c  time.c  uart.c  wifi.c
platform/pico/cmake/: pico.cmake
platform/pico/resources/: lfs.S  memmap.ld  memmap_rp2040.ld.in  memmap_rp2350-arm-s.ld.in  pico.cmake
platform/pico/wifi/: dhcp.c  dhcp.h  dns.c  dns.h  http.c  http.h  lwipopts.h  tcp.c  tcp.h  wifi.c
resources/: messages.h  resources.qrc  style.qss
src/: CMakeLists.txt  autoconfig.h  config.h  config_old.h  info.h  main.c  pico_sdk_import.cmake  reset.c  validator.h  version.h
src/io/: CMakeLists.txt  aahrs.c  aahrs.h  api.c  api.h  baro.c  baro.h  binary.c  binary.h  display.c  display.h  error.c  error.h  esc.c  esc.h  flash.c  flash.h  gps.c  gps.h  imu.c  imu.h  led.c  led.h  platform.c  platform.h  pwm.c  pwm.h  pwm.pio  receiver.c  receiver.h  serial.c  serial.h  servo.c  servo.h  switch.c  switch.h
src/io/wifly/: CMakeLists.txt  lwipopts.h  wifly.c  wifly.h
src/io/wifly/dhcp/: dhcp.h
src/io/wifly/dns/: dns.h
src/io/wifly/pcl/: dhcp.c  dhcp.h  dns.c  dns.h  tcp.c  tcp.h
src/io/wifly/tcp_ip/: dhcp.c  dns.c  dns.h  tcp.c
src/lib/: CMakeLists.txt  athr.h  dmp.c  dmp.h  info.c  info.h  jsmn.h  minmea.c  minmea.h  nav.c  nav.h  pid.c  pid.h  pidtune.c  pidtune.h  semver.c  semver.h
src/lib/fusion/: acc.c  acc.h  approx.c  approx.h  calibration.c  calibration.h  data.c  data.h  fconfig.h  fmath.c  fmath.h  fusion.c  fusion.h  mag.c  mag.h  matrix.c  matrix.h  orient.c  orient.h  status.c  status.h
src/lib/fusion/drivers/: ak09916.c  ak09916.h  bno055.c  bno055.h  drivers.c  drivers.h  icm20948.c  icm20948.h
src/modes/: CMakeLists.txt  aircraft.c  aircraft.h  auto.c  auto.h  direct.c  direct.h  flight.c  flight.h  hold.c  hold.h  launch.c  launch.h  modes.c  modes.h  normal.c  normal.h  tune.c  tune.h
src/sys/: CMakeLists.txt  athr.c  boot.c  boot.h  config.c  config.h  configuration.c  configuration.h  control.c  control.h  flightplan.c  flightplan.h  info.c  info.h  log.c  log.h  print.h  runtime.c  runtime.h  switch.c  switch.h  throttle.c  throttle.h  version.c  version.h
src/sys/api/: CMakeLists.txt  api.c  api.h
src/sys/api/cmds/: cmds.c  cmds.h
src/sys/api/cmds/GET/: get_config.c  get_config.h  get_flash.c  get_flash.h  get_flightplan.c  get_flightplan.h  get_fplan.c  get_fplan.h  get_info.c  get_info.h  get_input.c  get_input.h  get_logs.c  get_logs.h  get_mode.c  get_mode.h  get_pid.c  get_pid.h  get_sensor.c  get_sensor.h  get_sensors.c  get_sensors.h
src/sys/api/cmds/MISC/: about.c  about.h  help.c  help.h  ping.c  ping.h  reboot.c  reboot.h  reset.c  reset.h
src/sys/api/cmds/SET/: set_bay.c  set_bay.h  set_config.c  set_config.h  set_flightplan.c  set_flightplan.h  set_fplan.c  set_fplan.h  set_mode.c  set_mode.h  set_pid.c  set_pid.h  set_setpoints.c  set_setpoints.h  set_target.c  set_target.h  set_waypoint.c  set_waypoint.h
src/sys/api/cmds/TEST/: test_aahrs.c  test_aahrs.h  test_all.c  test_all.h  test_esc.c  test_esc.h  test_flash.c  test_flash.h  test_gps.c  test_gps.h  test_imu.c  test_imu.h  test_pwm.c  test_pwm.h  test_servo.c  test_servo.h  test_throttle.c  test_throttle.h
src/wifly/: CMakeLists.txt  lwipopts.h  wifly.c  wifly.h
src/wifly/tcp_ip/: dhcp.c  dhcp.h  dns.c  dns.h  tcp.c  tcp.h
utils/: CMakeLists.txt  clang-format.cmake  doxygen.cmake
utils/mklittlefs/: CMakeLists.txt
web/: btn.js  conf.js  gen.js  map.js  style.css  window.js
www/: .eslintrc.cjs  .gitignore  .prettierrc.json  api.json  compress-cra.json  index.html  package.json  tailwind.config.js  vite.config.ts  www.cmake  www.sh
www/api/: v1.mock.ts
www/elements/: Alert.tsx
www/helpers/: classNames.ts  hasInternet.ts
www/src/: main.tsx
www/src/elements/: Alert.tsx  ConfigViewer.tsx  ContentBlock.tsx  Map.tsx  Sidebar.tsx  Spinner.tsx  Uploader.tsx
www/src/helpers/: api.ts  calculateDistance.ts  (+4 more)
(+11 files in other folders)
