add_library(fbw_api
    api.c
    cmds/cmds.c
    cmds/GET/get_config.c
    cmds/GET/get_flash.c
    cmds/GET/get_fplan.c
    cmds/GET/get_info.c
    cmds/GET/get_logs.c
    cmds/GET/get_mode.c
    cmds/GET/get_pid.c
    cmds/GET/get_sensors.c
    cmds/MISC/about.c
    cmds/MISC/help.c
    cmds/MISC/ping.c
    cmds/MISC/reboot.c
    cmds/MISC/reset.c
    cmds/SET/set_config.c
    cmds/SET/set_fplan.c
    cmds/SET/set_mode.c
    cmds/SET/set_pid.c
    cmds/SET/set_setpoints.c
    cmds/SET/set_target.c
    cmds/TEST/test_servo.c
)

target_link_libraries(fbw_api
    fbw_io
    fbw_lib
    fbw_modes
    fbw_wifly
    hardware_watchdog
    pico_base
    pico_platform
    pico_runtime
    pico_time
)
